Content update, updated image, updated next, popover z-index fix

--- a/components/Nav/nav.module.scss
+++ b/components/Nav/nav.module.scss
@@ -36,6 +36,7 @@
 .mobileContainer {
   display: none;
   flex-direction: column;
+  z-index: 10;
   @include mobile {
     display: flex;
   }
